--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.8",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
+    "jszip": "^3.10.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
