--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
