--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.8",
+    "emailjs-com": "^3.2.0",
+    "express": "^5.2.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
+    "openai": "^6.10.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
