--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.13.5",
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.8",
     "emailjs-com": "^3.2.0",
@@ -18,7 +19,6 @@
     "framer-motion": "^12.23.24",
     "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
-    "openai": "^6.10.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
